test/errors/extend-base.jade
extends auxiliary/bad-base

block head
  style
    #example{font-size:bigger;}
block content
  #example
    | text